[gd_scene load_steps=23 format=3 uid="uid://cxtpvg3a3b6ny"]

[ext_resource type="Script" path="res://scenes/init_VR.gd" id="1_1cmee"]
[ext_resource type="PackedScene" uid="uid://wpk68xln3ml1" path="res://scenes/players/fps_player.tscn" id="3_1doh0"]
[ext_resource type="Script" path="res://scenes/choice_manager.gd" id="3_ovhdl"]
[ext_resource type="PackedScene" uid="uid://cwxikevd2febl" path="res://scenes/target_FR.tscn" id="3_uwpqm"]
[ext_resource type="PackedScene" uid="uid://pl1b8cmvnwdm" path="res://scenes/target_EN.tscn" id="4_a1xje"]
[ext_resource type="Script" path="res://scripts/floating_ui.gd" id="4_s25jm"]
[ext_resource type="PackedScene" uid="uid://73qen22upk0x" path="res://scenes/target_STFR.tscn" id="7_dn0jd"]
[ext_resource type="PackedScene" uid="uid://conusqvj0ho0d" path="res://scenes/target_STEN.tscn" id="8_b42bb"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_j4efi"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_kmgnv"]
sky_material = SubResource("ProceduralSkyMaterial_j4efi")

[sub_resource type="Environment" id="Environment_ggn2x"]
background_mode = 2
sky = SubResource("Sky_kmgnv")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_vptju"]
size = Vector3(100, 1, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_0go3u"]
size = Vector3(1, 1, 0.00664818)

[sub_resource type="ViewportTexture" id="ViewportTexture_2y4di"]
viewport_path = NodePath("ChoicePanels/Choix1/opt1")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_34abf"]
resource_local_to_scene = true
transparency = 1
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_2y4di")

[sub_resource type="QuadMesh" id="QuadMesh_t0675"]

[sub_resource type="ViewportTexture" id="ViewportTexture_aocl3"]
viewport_path = NodePath("ChoicePanels/Choix1/opt2")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ayaao"]
resource_local_to_scene = true
transparency = 1
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_aocl3")

[sub_resource type="ViewportTexture" id="ViewportTexture_cgnwx"]
viewport_path = NodePath("ChoicePanels/Choix2/opt3")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5c3h6"]
resource_local_to_scene = true
transparency = 1
shading_mode = 0
albedo_color = Color(1, 1, 1, 0)
albedo_texture = SubResource("ViewportTexture_cgnwx")

[sub_resource type="ViewportTexture" id="ViewportTexture_wkg46"]
viewport_path = NodePath("ChoicePanels/Choix2/opt4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4v7y0"]
resource_local_to_scene = true
transparency = 1
shading_mode = 0
albedo_color = Color(1, 1, 1, 0)
albedo_texture = SubResource("ViewportTexture_wkg46")

[node name="Start" type="Node3D"]
script = ExtResource("1_1cmee")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ggn2x")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="Fps_player" parent="." instance=ExtResource("3_1doh0")]

[node name="floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.145661, 0.716851, -3.02968)

[node name="CollisionShape3D" type="CollisionShape3D" parent="floor"]
shape = SubResource("BoxShape3D_vptju")

[node name="ChoicePanels" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_ovhdl")

[node name="Choix1" type="Node3D" parent="ChoicePanels"]

[node name="FloatingOpt1" type="StaticBody3D" parent="ChoicePanels/Choix1" node_paths=PackedStringArray("control") groups=["UI_target"]]
transform = Transform3D(1.51714, 0, 0.707455, 0, 1.67398, 0, -0.707455, 0, 1.51714, -2, 2.8, -5)
collision_layer = 4
collision_mask = 0
script = ExtResource("4_s25jm")
control = NodePath("../opt1/Target_FR")
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="ChoicePanels/Choix1/FloatingOpt1"]
shape = SubResource("BoxShape3D_0go3u")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ChoicePanels/Choix1/FloatingOpt1"]
material_override = SubResource("StandardMaterial3D_34abf")
mesh = SubResource("QuadMesh_t0675")
skeleton = NodePath("")

[node name="FloatingOpt2" type="StaticBody3D" parent="ChoicePanels/Choix1" node_paths=PackedStringArray("control") groups=["UI_target"]]
transform = Transform3D(1.61032, 0, -0.750904, 0, 1.77679, 0, 0.750904, 0, 1.61032, 2, 2.8, -5)
collision_layer = 4
collision_mask = 0
script = ExtResource("4_s25jm")
control = NodePath("../opt2/Target_EN")
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="ChoicePanels/Choix1/FloatingOpt2"]
shape = SubResource("BoxShape3D_0go3u")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ChoicePanels/Choix1/FloatingOpt2"]
material_override = SubResource("StandardMaterial3D_ayaao")
mesh = SubResource("QuadMesh_t0675")
skeleton = NodePath("")

[node name="opt1" type="SubViewport" parent="ChoicePanels/Choix1"]
transparent_bg = true

[node name="Target_FR" parent="ChoicePanels/Choix1/opt1" instance=ExtResource("3_uwpqm")]

[node name="opt2" type="SubViewport" parent="ChoicePanels/Choix1"]
transparent_bg = true

[node name="Target_EN" parent="ChoicePanels/Choix1/opt2" instance=ExtResource("4_a1xje")]

[node name="Choix2" type="Node3D" parent="ChoicePanels"]

[node name="FloatingOpt3" type="StaticBody3D" parent="ChoicePanels/Choix2" node_paths=PackedStringArray("control") groups=["UI_target"]]
transform = Transform3D(1.51714, 0, 0.707455, 0, 1.67398, 0, -0.707455, 0, 1.51714, -2, 2.8, -5)
collision_layer = 4
collision_mask = 0
script = ExtResource("4_s25jm")
control = NodePath("../opt3/Target_STFR")
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="ChoicePanels/Choix2/FloatingOpt3"]
shape = SubResource("BoxShape3D_0go3u")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ChoicePanels/Choix2/FloatingOpt3"]
material_override = SubResource("StandardMaterial3D_5c3h6")
mesh = SubResource("QuadMesh_t0675")
skeleton = NodePath("")

[node name="FloatingOpt4" type="StaticBody3D" parent="ChoicePanels/Choix2" node_paths=PackedStringArray("control") groups=["UI_target"]]
transform = Transform3D(1.61032, 0, -0.750904, 0, 1.77679, 0, 0.750904, 0, 1.61032, 2, 2.8, -5)
collision_layer = 4
collision_mask = 0
script = ExtResource("4_s25jm")
control = NodePath("../opt4/Target_STEN")
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="ChoicePanels/Choix2/FloatingOpt4"]
shape = SubResource("BoxShape3D_0go3u")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ChoicePanels/Choix2/FloatingOpt4"]
material_override = SubResource("StandardMaterial3D_4v7y0")
mesh = SubResource("QuadMesh_t0675")
skeleton = NodePath("")

[node name="opt3" type="SubViewport" parent="ChoicePanels/Choix2"]
transparent_bg = true

[node name="Target_STFR" parent="ChoicePanels/Choix2/opt3" instance=ExtResource("7_dn0jd")]

[node name="opt4" type="SubViewport" parent="ChoicePanels/Choix2"]
transparent_bg = true

[node name="Target_STEN" parent="ChoicePanels/Choix2/opt4" instance=ExtResource("8_b42bb")]
